[package]
name = "blockchain-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web框架和服务器
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 加密库
ed25519-dalek = "2.1"
hex = "0.4"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"

# JWT和认证
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }

# 错误处理和日志
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# 数据库（可选，用于缓存验证结果）
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"], optional = true }

# 配置管理
config = "0.14"
dotenv = "0.15"

# 网络客户端
reqwest = { version = "0.11", features = ["json"] }

[features]
default = []
database = ["sqlx"]
